--- a/date/2025-01/page-3.htm
+++ b/date/2025-01/page-3.htm
@@ -110,6 +110,48 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-01-13">
+                            <div class="col-md-3">
+                                <a href="/news/article-39875.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/39126b07cf6d61d1c370d3aea13f4511.webp" alt="CountDownLatch和CyclicBarrier：如何让多线程步调一致" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-39875.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">CountDownLatch和CyclicBarrier：如何让多线程步调一致</h3>
+                                </a>
+                                <p>
+                                    案例：对账系统的业务是这样的，用户通过在线商城下单，会生成电子订单，保存在订单库；之后物流会生成派送单给用户发货，派送单保存在派送单库。为了防止漏派送或者重复派送，对账系统每天还会校验是否存在异常订单                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-01-12">
+                            <div class="col-md-3">
+                                <a href="/news/article-39379.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/3573afb606daf0db2c0ef11de096fb5e.webp" alt="深圳益沣成资产管理有限公司（深圳市益成实业有限公司）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-39379.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">深圳益沣成资产管理有限公司（深圳市益成实业有限公司）</h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享深圳益沣成资产管理有限公司的知识，其中也会对深圳市益成实业有限公司进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、景区托管的.                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-01-12">
+                            <div class="col-md-3">
+                                <a href="/news/article-39378.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="狗粮加工厂利润成本分析表模板怎么写（狗粮生产成本）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-39378.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">狗粮加工厂利润成本分析表模板怎么写（狗粮生产成本）</h3>
+                                </a>
+                                <p>
+                                    摘要：       今天给各位分享狗粮加工厂利润成本分析表模板怎么写的知识，其中也会对狗粮生产成本进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、成本分析表怎.                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-01-12">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-1-12-node-share-links.htm" class="xcblog-blog-url">
@@ -208,48 +250,6 @@
                                     这一次的节点更新覆盖了欧洲、香港、日本、加拿大、美国、新加坡、韩国等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-09">
-                            <div class="col-md-3">
-                                <a href="/news/article-37894.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="动物疫苗接种后多久产生抗体了正常（动物疫苗打几次）" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-37894.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">动物疫苗接种后多久产生抗体了正常（动物疫苗打几次）</h3>
-                                </a>
-                                <p>
-                                    摘要：       本篇文章给大家谈谈动物疫苗接种后多久产生抗体了正常，以及动物疫苗打几次对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗打疫苗后要多长时间生效?...                                   </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-09">
-                            <div class="col-md-3">
-                                <a href="/news/article-37892.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="十大毒猫粮黑名单图片 十大毒猫粮排行榜" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-37892.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">十大毒猫粮黑名单图片 十大毒猫粮排行榜</h3>
-                                </a>
-                                <p>
-                                    摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于十大毒猫粮黑名单图片的问题，于是小编就整理了4个相关介绍十大毒猫粮黑名单图片的解答，让我们一起看看吧。什么样的猫粮不能吃？耀目是                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-01-09">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-1-9-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="1月9日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-1-9-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">1月9日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、美国、日本、新加坡、欧洲、韩国、香港等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li><a href="/date/2025-01/page-2.htm">&laquo;</a></li> <li><a href="/date/2025-01/">1</a></li><li><a href="/date/2025-01/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/date/2025-01/page-4.htm">4</a></li><li><a href="/date/2025-01/page-5.htm">5</a></li><li><a href="/date/2025-01/page-6.htm">6</a></li> <li><a href="/date/2025-01/page-4.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -260,16 +260,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-1-13-node-share-links.htm" title="1月13日→18.9M/S|2025年最新免费节点Sockscap64订阅链接地址">1月13日→18.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-42352.htm" title="宠物店医疗许可证（宠物医疗许可证哪里办）">宠物店医疗许可证（宠物医疗许可证哪里办）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-27-free-high-speed-nodes.htm" title="12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">12月27日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-30725.htm" title="动物医院诊疗范围包括哪些（动物医院诊疗范围包括哪些项目）">动物医院诊疗范围包括哪些（动物医院诊疗范围包括哪些项目）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-3-free-high-speed-nodes.htm" title="1月3日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址">1月3日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-31162.htm" title="兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）">兽医宠物店的兽医一个月能挣多少钱（兽医一般多少钱一个月）</a></li>
-                        <li class="py-2"><a href="/news/article-38888.htm" title="澳洲什么牌子的dha好(澳洲什么牌子的dha好一点)">澳洲什么牌子的dha好(澳洲什么牌子的dha好一点)</a></li>
-                        <li class="py-2"><a href="/news/article-30244.htm" title="动物疫苗接种时间查询app 动物疫苗查询系统">动物疫苗接种时间查询app 动物疫苗查询系统</a></li>
-                        <li class="py-2"><a href="/news/article-35254.htm" title="动物疫苗上市企业排名（动物疫苗上市企业排名）">动物疫苗上市企业排名（动物疫苗上市企业排名）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-10-free-subscribe-node.htm" title="1月10日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址">1月10日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-25-free-high-speed-nodes.htm" title="12月25日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">12月25日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-32626.htm" title="领养宠物需要什么手续（领养宠物需要收费吗）">领养宠物需要什么手续（领养宠物需要收费吗）</a></li>
+                        <li class="py-2"><a href="/news/article-36436.htm" title="spring源码之Mybatis扫描器">spring源码之Mybatis扫描器</a></li>
+                        <li class="py-2"><a href="/news/article-41847.htm" title="动物医院运营与管理 动物医院运营与管理pdf">动物医院运营与管理 动物医院运营与管理pdf</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-19-free-high-speed-nodes.htm" title="1月19日→23M/S|2025年最新免费节点Sockscap64订阅链接地址">1月19日→23M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-39378.htm" title="狗粮加工厂利润成本分析表模板怎么写（狗粮生产成本）">狗粮加工厂利润成本分析表模板怎么写（狗粮生产成本）</a></li>
+                        <li class="py-2"><a href="/news/article-40367.htm" title="宠物口粮上市公司（宠物口粮上市公司有几家）">宠物口粮上市公司（宠物口粮上市公司有几家）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-9-node-share.htm" title="1月9日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月9日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-30137.htm" title="学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）">学兽医去哪里学比较好就业（学兽医去哪里学比较好就业方向）</a></li>
+                        <li class="py-2"><a href="/news/article-41846.htm" title="python开发HDFS">python开发HDFS</a></li>
                     </ul>
     </div>
 </div>
@@ -281,7 +281,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">57</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">27</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
