--- a/date/2025-01/page-7.htm
+++ b/date/2025-01/page-7.htm
@@ -3,18 +3,18 @@
 
 <head>
         <link rel="canonical" href="https://sockscap64.github.io" />
-    <title>隐私申明 - Sockscap64免费机场节点分享官网</title>
-        <meta name="keywords" content="隐私申明 - Sockscap64免费机场节点分享官网" />
-        <meta name="description" content="隐私申明 - Sockscap64免费机场节点分享官网" />
+    <title>2025-01归档 - 第6页 - Sockscap64免费机场节点分享官网</title>
+        <meta name="keywords" content="2025-01归档Sockscap64免费机场节点分享官网" />
+        <meta name="description" content="2025-01归档，当前是第6页" />
         <link rel="icon" href="/assets/website/img/sockscap64/favicon.ico" type="image/x-icon"/>
 
     <meta name="author" content="Sockscap64免费机场节点分享官网">
     <meta property="og:type" content="webpage" />
     <meta property="og:url" content="https://sockscap64.github.io" />
     <meta property="og:site_name" content="Sockscap64免费机场节点分享官网" />
-    <meta property="og:title" content="隐私申明 - Sockscap64免费机场节点分享官网" />
+    <meta property="og:title" content="2025-01归档 - 第6页 - Sockscap64免费机场节点分享官网" />
     <meta property="og:image" content="/assets/website/img/sockscap64/favicon.ico" />
-        <meta property="og:description" content="隐私申明 - Sockscap64免费机场节点分享官网" />
+        <meta property="og:description" content="2025-01归档，当前是第6页" />
         
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -26,7 +26,7 @@
     <meta name="robots" content="max-image-preview:large" />
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="隐私申明 - Sockscap64免费机场节点分享官网">
+    <meta name="apple-mobile-web-app-title" content="2025-01归档 - 第6页 - Sockscap64免费机场节点分享官网">
     <meta name="format-detection" content="telephone=no">
 
     <link rel="dns-prefetch" href="https:/www.googletagmanager.com">
@@ -65,7 +65,7 @@
      crossorigin="anonymous"></script>
 </head>
 
-<body data-page="newly_discovered_nodes">
+<body data-page="category">
         <div id="home">
         <div class="site-header">
             <div class="main-header">
@@ -112,10 +112,10 @@
             <li>
                 <img src="/assets/website/img/sockscap64/banner01.jpg" alt="">
                 <div class="flex-caption">
-                    <h1>隐私申明</h1>
+                    <h1>2025-01 归档</h1>
                     <span></span>
                     <p>
-                        <a href="/">首页</a> / 隐私申明
+                        <a href="/">首页</a> / 2025-01 归档
                     </p>
                 </div>
             </li>
@@ -125,51 +125,51 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-9">
-                    <p>本平台专注于为用户提供V2ray、Clash等免费节点订阅服务，我们深知用户隐私的重要性，并致力于保护用户的个人信息和隐私安全。本隐私声明旨在明确告知用户本平台如何收集、使用、存储和保护用户的个人信息。</p>
-<p>一、信息收集</p>
-<ol>
-    <li>
-        <p><strong>用户主动提供的信息</strong>：当用户在本平台注册、使用服务或参与特定活动时，可能会主动提供个人信息，如姓名、邮箱地址等。这些信息将仅用于提供服务或活动的目的，并在用户明确同意的情况下进行收集。</p>
-    </li>
-    <li>
-        <p><strong>服务使用数据</strong>：为了优化用户体验和服务质量，本平台可能会自动收集用户在使用服务过程中产生的数据，如访问记录、节点使用情况等。这些数据将用于分析服务使用情况，以便我们持续改进服务。</p>
-    </li>
-</ol>
-<p>二、信息使用</p>
-<ol>
-    <li>
-        <p><strong>提供服务</strong>：本平台将使用收集到的信息来提供用户所需的服务，包括但不限于节点订阅、服务更新通知等。</p>
-    </li>
-    <li>
-        <p><strong>数据分析</strong>：我们可能会对收集到的数据进行分析，以了解用户的使用习惯和需求，从而改进和优化服务。</p>
-    </li>
-    <li>
-        <p><strong>法律合规</strong>：在必要时，我们可能会根据法律法规的要求，向相关部门提供用户的个人信息，以配合执法或调查工作。</p>
-    </li>
-</ol>
-<p>三、信息存储与保护</p>
-<ol>
-    <li>
-        <p><strong>信息安全</strong>：本平台将采取必要的技术和管理措施，确保用户个人信息的安全。我们会对存储的数据进行加密处理，并定期进行安全检查和漏洞修复。</p>
-    </li>
-    <li>
-        <p><strong>信息存储期限</strong>：我们将根据服务需求和相关法律法规的要求，合理确定用户个人信息的存储期限。一旦超出存储期限，我们将对个人信息进行删除或匿名化处理。</p>
-    </li>
-</ol>
-<p>四、用户权利</p>
-<ol>
-    <li>
-        <p><strong>访问与更正</strong>：用户有权访问自己的个人信息，并对其进行更正。用户可以通过本平台提供的联系方式，申请查看或修改自己的个人信息。</p>
-    </li>
-    <li>
-        <p><strong>删除</strong>：在用户停止使用服务或注销账户后，我们将根据用户的请求，删除或匿名化处理其个人信息。</p>
-    </li>
-    <li>
-        <p><strong>投诉与举报</strong>：如果用户认为本平台在处理个人信息方面存在违法行为，可以通过本平台提供的联系方式进行投诉或举报。</p>
-    </li>
-</ol>
-<p>五、隐私声明的更新与修改</p>
-<p>本平台有权根据实际情况和法律法规的变化，对本隐私声明进行更新和修改。任何对隐私声明的修改都将通过本平台公告或电子邮件等方式通知用户。用户在使用服务时，应定期查看隐私声明，以了解最新的个人信息保护措施。</p>
+                    <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-01-01">
+                            <div class="col-md-3">
+                                <a href="/news/article-34044.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/4783339f2047bfa62b8bf471ce1cc8e3.webp" alt="制作狗粮机器多少钱一套（自制狗粮机）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-34044.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">制作狗粮机器多少钱一套（自制狗粮机）</h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈制作狗粮机器多少钱一套，以及自制狗粮机对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、火腿肠加工机器多少钱2、...        本篇文                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-01-01">
+                            <div class="col-md-3">
+                                <a href="/news/article-34043.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/64298c376a60118159c5bd55888eac43.webp" alt="猫三联到底是两针还是三针啊图片（猫三联每针的作用）" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-34043.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">猫三联到底是两针还是三针啊图片（猫三联每针的作用）</h3>
+                                </a>
+                                <p>
+                                    摘要：       本篇文章给大家谈谈猫三联到底是两针还是三针啊图片，以及猫三联每针的作用对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫三联间隔多久打一次...                                      </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-01-01">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-1-1-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-1-1-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、新加坡、日本、香港、加拿大、韩国、欧洲等地区,最高速度可达22.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                        
+                        <ul class="pagination"><li><a href="/date/2025-01/page-6.htm">&laquo;</a></li> <li><a href="/date/2025-01/">1</a></li><li><a href="/date/2025-01/page-2.htm">2</a></li><li><a href="/date/2025-01/page-3.htm">3</a></li><li><a href="/date/2025-01/page-4.htm">4</a></li><li><a href="/date/2025-01/page-5.htm">5</a></li><li><a href="/date/2025-01/page-6.htm">6</a></li><li class="active"><span>7</span></li> <li class="disabled"><span>&raquo;</span></li></ul>                    </div>
                 </div>
                 <div class="col-md-3">
                     <div class="panel panel-default">
@@ -178,16 +178,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-33576.htm" title="宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）">宠物粮在哪个网站买便宜又好呢（宠物粮在哪里批发）</a></li>
-                        <li class="py-2"><a href="/news/article-34518.htm" title="附近宠物收容中心（附近宠物收容中心电话）">附近宠物收容中心（附近宠物收容中心电话）</a></li>
-                        <li class="py-2"><a href="/news/article-43835.htm" title="给动物打疫苗的简报 给动物打疫苗的简报怎么写">给动物打疫苗的简报 给动物打疫苗的简报怎么写</a></li>
-                        <li class="py-2"><a href="/news/article-42353.htm" title="简单宠物寄养协议（宠物店宠物寄养协议）">简单宠物寄养协议（宠物店宠物寄养协议）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-20-free-high-speed-nodes.htm" title="1月20日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">1月20日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-31679.htm" title="记-Windows环境下Prometheus+alertmanager+windows_exporter+mtail监控部署提起网关日志">记-Windows环境下Prometheus+alertmanager+windows_exporter+mtail监控部署提起网关日志</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-7-node-share.htm" title="1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址">1月7日→20M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-40861.htm" title="适合穷人养的猫咪（适合穷人养的猫咪品种）">适合穷人养的猫咪（适合穷人养的猫咪品种）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-11-free-node-subscribe.htm" title="1月11日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址">1月11日→18.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-40367.htm" title="宠物口粮上市公司（宠物口粮上市公司有几家）">宠物口粮上市公司（宠物口粮上市公司有几家）</a></li>
+                        <li class="py-2"><a href="/news/article-30724.htm" title="动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）">动物防疫疫苗管理要点包括什么和什么（动物防疫疫苗管理要点包括什么和什么两个方面）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-31-free-node-subscribe-links.htm" title="12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">12月31日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-26-node-share-links.htm" title="12月26日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址">12月26日→20.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-39875.htm" title="CountDownLatch和CyclicBarrier：如何让多线程步调一致">CountDownLatch和CyclicBarrier：如何让多线程步调一致</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-1-free-node-subscribe.htm" title="1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址">1月1日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-40860.htm" title="免费领养宠物包邮吗现在（免费领养宠物送到家）">免费领养宠物包邮吗现在（免费领养宠物送到家）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-28-free-high-speed-nodes.htm" title="12月28日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">12月28日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-42352.htm" title="宠物店医疗许可证（宠物医疗许可证哪里办）">宠物店医疗许可证（宠物医疗许可证哪里办）</a></li>
+                        <li class="py-2"><a href="/news/article-30136.htm" title="什么是Python高阶函数">什么是Python高阶函数</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-16-free-high-speed-nodes.htm" title="1月16日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址">1月16日→22.8M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
